--- a/sass/components/hero.scss
+++ b/sass/components/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: #fff;
+  background: rgb(226,234,235);
   .container {
     @media (min-width: 360px) {
       padding: 0 30px;
@@ -72,10 +72,10 @@
               text-decoration: none;
               color: transparent;
               transition: color 0.3s, -webkit-text-stroke 0.3s;
-              -webkit-text-stroke: 1px #000;
+              -webkit-text-stroke: 1px rgb(95, 75, 139);
               &:hover {
-                color: black;
-                -webkit-text-stroke: 1px transparent;
+                color: white;
+                -webkit-text-stroke: 1px black;
               }
               span {
                 line-height: 1.1;
@@ -101,7 +101,7 @@
     .hero-inner-footer {
       .hero-inner-footer-text {
         p {
-          font-size: 1.8rem;
+          font-size: 1.6rem;
           margin-top: -90px;
           width: 100%;
           line-height: 4.4rem;
