--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,8 +15,8 @@ body {
   font-family: "Avenir", "Poppins", -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
-  color: #000;
-  background: #fff;
+  color: rgb(95, 75, 139);
+  background: rgb(95, 75, 139);
   font-size: 16px;
 }
 
@@ -31,7 +31,7 @@ body {
   height: 80px;
   width: 80px;
   border-radius: 100%;
-  background: #000;
+  background: rgb(95, 75, 139);
   display: flex;
   align-items: center;
   justify-content: center;
