--- a/sass/components/hero.scss
+++ b/sass/components/hero.scss
@@ -70,9 +70,9 @@
               position: relative;
               overflow: hidden;
               text-decoration: none;
-              color: transparent;
+              color: rgb(240, 237, 227);
               transition: color 0.3s, -webkit-text-stroke 0.3s;
-              -webkit-text-stroke: 1px rgb(95, 75, 139);
+              -webkit-text-stroke: 1px rgb(100, 83, 148);
               &:hover {
                 color: white;
                 -webkit-text-stroke: 1px black;
